# dead-simple-zip

./: .gitignore  Archive.h  CMakeLists.txt  Factory.h  dszip.cpp  dszip.h  license.md  readme.md
code/: .keep  ArchiveImpl.cpp  ArchiveImpl.h  Factory.cpp
code/dependencies/minizip/: CMakeLists.txt
code/dependencies/minizip/zlib/: CMakeLists.txt
code/dependencies/zlib/: .gitignore  CMakeLists.txt
test/: TestArchiveImpl.cpp
test/files/: .keep
